# freqcascade

./: LICENSE  README.md  pyproject.toml  test.ipynb
.github/workflows/: publish.yml  test.yml
src/freqcascade/: __init__.py  base_learners.py  cv.py  decomposition.py  features.py  focc.py  metrics.py  multilabel_baselines.py  multilabel_metrics.py  rebalance.py  resampling_baselines.py  stats.py  text_cnn.py  torch_ensemble.py
tests/: _helpers.py  test_cv.py  test_decomposition.py  test_focc.py  test_lazy_imports.py  test_mocked_decomposition.py  test_mocked_focc.py  test_resampling_baselines.py  test_stats.py
