[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freqcascade"
version = "0.1.0"
description = "Recursive frequency-ordered ensemble decomposition for imbalanced multiclass and multi-label classification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "freqcascade contributors" },
]
keywords = [
    "imbalanced-learning",
    "text-classification",
    "multi-label-classification",
    "ensemble-learning",
    "random-forest",
    "classifier-chains",
    "class-imbalance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
]
imbalance = [
    "imbalanced-learn>=0.11",
]
stats = [
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]
all = [
    "freqcascade[torch,imbalance,stats]",
]
dev = [
    "pytest>=7.0",
    "freqcascade[all]",
]

[project.urls]
# TODO: fill in once you've created the repo -- e.g.
# Homepage = "https://github.com/<your-username>/freqcascade"
# Repository = "https://github.com/<your-username>/freqcascade"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
